Fix allmodconfig GCC build
Reported-by: Sumera Priyadarsini <sylphrenadin@gmail.com>
Signed-off-by: Miguel Ojeda <ojeda@kernel.org>

--- a/rust/Makefile
+++ b/rust/Makefile
@@ -45,6 +45,7 @@ else
 # `TENTATIVE_CLANG_FLAGS`.
 bindgen_skip_c_flags := -mno-fp-ret-in-387 -mpreferred-stack-boundary=% \
 	-mskip-rax-setup -mgeneral-regs-only -msign-return-address=% \
+	-mindirect-branch=thunk-extern -mindirect-branch-register -mrecord-mcount \
 	-mabi=lp64 -mstack-protector-guard% -fconserve-stack -falign-jumps=% \
 	-falign-loops=% -fno-ipa-cp-clone -fno-partial-inlining \
 	-fno-reorder-blocks -fno-allow-store-data-races -fasan-shadow-offset=% \
