Make ourselves !COMPILE_TEST
In preparation of linux-next integration.

Suggested-by: Stephen Rothwell <sfr@canb.auug.org.au>
Signed-off-by: Miguel Ojeda <ojeda@kernel.org>

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -2039,6 +2039,7 @@ config PROFILING
 config RUST
 	bool "Rust support"
 	depends on HAS_RUST
+	depends on !COMPILE_TEST
 	default n
 	help
 	  Enables Rust support in the kernel.
